
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  June 16 2017, 22:20
  deviceServiceVersion = 1013436
	
  [-] Fixed error with receipt item splitting
  
********************************************************************************

  June 11 2017, 21:40
  deviceServiceVersion = 1013433
	
  [+] Added command 0xFF46, print receipt item v2
  [+] Barcode can be printed after receipt end
  
********************************************************************************

  June 5 2017, 17:50
  deviceServiceVersion = 1013430
	
  [-] Fixed errors X5 GKR-14828 and GKR-12406
  
********************************************************************************

  June 2 2017, 12:30
  deviceServiceVersion = 1013429
	
  [-] Fixed error with Z report - error on ZReport printing will be ignored
  [-] Fixed error with receipt header printing
  
********************************************************************************

  May 23 2017, 13:30
  deviceServiceVersion = 1013428
	
  [-] Fixed error with receipt item discount, added parameter 
      FSReceiptItemDiscountEnabled
  
********************************************************************************

  May 15 2017, 19:30
  deviceServiceVersion = 1013427
	
  [-] Fixed error with receipt item discount
  
********************************************************************************

  May 5 2017, 12:50
  deviceServiceVersion = 1013426
	
  [+] Added parameter "combineReceiptItems" to combine receipt items,
      that has equal price and text
	  
  [-] Fixed error with surcharge

********************************************************************************

  April 26 2017, 21:50
  deviceServiceVersion = 1013420
	
  [-] Fixed error with storno
  