@@ -1278,11 +1278,14 @@ class PrinterTest implements FiscalPrinterConst {
             printer.printRecSubtotalAdjustment(1, "", 8);
             printer.printRecTotal(730, 730, "00");
             
-            /*
+/*            
             printer.printRecItem("Item 1", 0, 8000, 1, 123, "ST");
             printer.printRecItemAdjustment(1, "", 100, 1);
             printer.printRecItem("Item 2", 0, 12340, 1, 123, "ST");
             printer.printRecItemAdjustment(1, "", 1000, 1);
+            printer.printRecTotal(2000000, 2000000, "00");
+
+            
             
             
             printer.printRecItem("17333 Шок.KIND.CH.мол.с мол.нач. 100г", 41920, 5000, 1, 9300, "ST");
@@ -1306,7 +1309,6 @@ class PrinterTest implements FiscalPrinterConst {
             printer.printRecTotal(99000, 99000, "00");
             */
             
-            //printer.printRecTotal(2000000, 2000000, "00");
             printer.endFiscalReceipt(false);
         } catch (Exception e) {
             e.printStackTrace();
