@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  June 19 2017, 14:00
+  deviceServiceVersion = 1013437
+	
+  [-] Fixed error with receipt items without discounts
+  
+********************************************************************************
+
   June 16 2017, 22:20
   deviceServiceVersion = 1013436
 	
